--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -28,11 +28,11 @@ body{
 }
 .container1 h1{
   margin: 0;
-  font-family: 'Cascadia Code';
+  font-family: 'Cascadia Code','Fira Code';
   font-size: 40px;
 }
 .container1 p{
-  font-family: 'Calibri';
+  font-family: 'Calibri','Open Sans';
   font-weight: bold;
 }
 .container1 .hello{
