--- a/src/stylesheets/quizapp.css
+++ b/src/stylesheets/quizapp.css
@@ -6,7 +6,7 @@
     max-width: 700px;
   }
 .quiz-container1 h1{
-    font-family: 'Cascadia Code',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Cascadia Code','Google Sans Code';
 
 }
 
@@ -15,11 +15,11 @@
 }
 .quiz-container1 li{
   font-weight: bold;
-  font-family: 'Calibri';
+  font-family: 'Calibri',"Poppins";
   line-height:45px;
 }
 .quiz-container1 p{
-  font-family: 'Calibri';
+  font-family: 'Calibri',"Poppins";
   padding-top: 40px;
 }
 @media (max-width: 1024px) {
