--- a/src/stylesheets/styles.css
+++ b/src/stylesheets/styles.css
@@ -157,7 +157,7 @@ body{
 
 /* Heading Styling */
 .container3 .h2 {
-  font-family: 'Cascadia Code','Fira Code';
+  font-family: 'Cascadia Code','Google Sans Code';
   color: whitesmoke;
 }
 
@@ -217,7 +217,7 @@ body{
 
 /* Heading Styling */
 .container4 h2 {
-  font-family: 'Cascadia Code','Fira Code';
+  font-family: 'Cascadia Code','Google Sans Code';
   color: whitesmoke;
 }
 
